--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   logger: ^2.5.0
   go_router: ^14.8.1
   easy_localization: ^3.0.7+1
+  video_player: ^2.9.5
+  chewie: ^1.11.1
 
 dev_dependencies:
   flutter_test:
