--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   easy_localization: ^3.0.7+1
   video_player: ^2.9.5
   chewie: ^1.11.1
+  infinite_scroll_pagination: ^4.1.0
 
 dev_dependencies:
   flutter_test:
