--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   chewie: ^1.11.1
   gap: ^3.0.1
   infinite_scroll_pagination: ^4.1.0
+  flutter_shimmer: ^2.1.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
