--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   video_player: ^2.9.5
   chewie: ^1.11.1
   infinite_scroll_pagination: ^4.1.0
+  cached_network_image: ^3.4.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
